Validated Admin Password Change Form

--- a/Phase 1 - HTML,CSS,JS/adminPass.html
+++ b/Phase 1 - HTML,CSS,JS/adminPass.html
@@ -4,6 +4,22 @@
 <title>Admin Page</title>
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\admin.css">
+<script>
+        function adminPassValidate (){
+        var newpass = document.getElementById('newpass').value;
+        var conpass = document.getElementById('conpass').value;
+
+        if(newpass != conpass)
+        {
+                alert("New Password Doesn't match.Try Again");
+                return false;
+        }
+        else{
+                alert("Password Changed Successfully");
+                return true;
+        }
+        }  
+</script>  
 </head>
 
 <body>
@@ -18,11 +34,11 @@
 <div class="content"></div>
 <h2>Administrator Password Manager</h2>  
 <div class="passChange">
-        <form class="passChange">
+        <form class="passChange" onsubmit="return adminPassValidate()" method="post">
                 <h3 class="search">Admin Account</h3><br>
                 <input type="text" class="passChange" placeholder="Enter Old Password"><br>
-                <input type="text" class="passChange" placeholder="Enter New Password"><br>
-                <input type="text" class="passChange" placeholder="Confirm New Password"><br>
+                <input type="text" class="passChange" placeholder="Enter New Password" id ="newpass"><br>
+                <input type="text" class="passChange" placeholder="Confirm New Password" id="conpass"><br>
                 <input type="submit" class="passChange" value="Change Now"><br>
                 <input type="reset" class="passChange" value="Reset"><br>
                 </form>
