--- a/Phase 1 - HTML,CSS,JS/candidateUpdateInfo.html
+++ b/Phase 1 - HTML,CSS,JS/candidateUpdateInfo.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\Secondary.css">
 <link rel="stylesheet" type="text/css" href="CSS\candidate-menu.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 
 
 </head>
@@ -34,7 +39,8 @@
 <hr>
 </div>
 <div class="contentCandUpdate">
-<h2>Candidate Information</h2>>
+<h2>Candidate Information</h2>
+<img id = "back" onclick="goBack()" src = "src\back.png">
 <div class="updateLeft">
 <form class="updateInfo" action="">
 		<h1 class="login">Update Information</h1>	
