--- a/Phase 1 - HTML,CSS,JS/companyContactAdmin.html
+++ b/Phase 1 - HTML,CSS,JS/companyContactAdmin.html
@@ -4,7 +4,11 @@
 <title>Home Page</title>
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\Company.css">
-
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 
 </head>
 
@@ -32,7 +36,8 @@
 </div>
 <hr>
 </div>
-<div class="content"></div>
+<div class="content">
+        <img id = "back" onclick="goBack()" src = "src\back.png" style="margin-top: 100px;">
 <div class="companyAdmin">
         <form class="companyAdmin">
             <h3 class="companyAdmin">Send A Message</h3><br>
