--- a/Phase 1 - HTML,CSS,JS/companyUpdateInfo.html
+++ b/Phase 1 - HTML,CSS,JS/companyUpdateInfo.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\Company.css">
 <link rel="stylesheet" type="text/css" href="CSS\Secondary.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 
 </head>
 
@@ -34,6 +39,7 @@
 </div>
 <div class="contentComUpdate">
         <h2>Company Information</h2>
+        <img id = "back" onclick="goBack()" src = "src\back.png">
         <div class="updateLeft">
         <form class="updateInfo" action="">
                 <h1 class="login">Update Information</h1>	
@@ -68,7 +74,7 @@
         
         </div>  
 
-        <div class="footer">
+        <div id="footer">
        
                 <div class="row">
                         <div class="flcolumn">
