--- a/Phase 1 - HTML,CSS,JS/postJob.html
+++ b/Phase 1 - HTML,CSS,JS/postJob.html
@@ -5,6 +5,11 @@
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\Company.css">
 <link rel="stylesheet" type="text/css" href="CSS\Secondary.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 
 </head>
 
@@ -33,7 +38,7 @@
 <hr>
 </div>
 <div class="content"></div>
-
+<img id = "back" onclick="goBack()" src = "src\back.png" style="margin-top: 60px;">
 <form class="postJob" action="">
 		<h1 class="login">Post A Job</h1>	
 	
