--- a/Phase 1 - HTML,CSS,JS/postedJobs.html
+++ b/Phase 1 - HTML,CSS,JS/postedJobs.html
@@ -4,6 +4,11 @@
 <title>Posted Jobs</title>
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\Company.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 </head>
 <body>
 
@@ -24,6 +29,7 @@
 </div>
 <div class="content"></div>
 <h2>Posted Jobs</h2>
+<img id = "back" onclick="goBack()" src = "src\back.png">
 <div class="company">
     <center>    
     <table class="postedJobs">
