--- a/Phase 1 - HTML,CSS,JS/Admin.html
+++ b/Phase 1 - HTML,CSS,JS/Admin.html
@@ -21,7 +21,7 @@
     <h3>Admin Name</h3><br>
     <img src="src\img_506378.png" class="details">
     <p>Other Details</p>
-    <input type="button" value="Log Out" class="details"><br><br>
+    <a href="HomePage.html"><input type="button" value="Log Out" class="details"></a><br><br>
     <a href="HomePage.html"><input type="button" value="Go Back To Home" class="details"></a>
 </div>    
 <div class="menu">
