--- a/Phase 1 - HTML,CSS,JS/adminAdd.html
+++ b/Phase 1 - HTML,CSS,JS/adminAdd.html
@@ -27,11 +27,11 @@
                 return true;
         }
         }  
-
+        function goBack(){
+    window.history.back();
+}
 </script>
-<script>
 
-</script>
 </head>
 
 <body>
@@ -44,7 +44,8 @@
         <hr>
         </div>
 <div class="content"></div>
-<h2>Administrator Account Manager</h2>  
+<h2>Administrator Account Manager</h2>
+<img id = "back" onclick="goBack()" src = "src\back.png">
 <div class="addAdmin">
         <form class="addAdmin" onsubmit=" return adminAddValidate();" method="POST">
                 <h3 class="search">Add An Administrator</h3><br>
