--- a/Phase 1 - HTML,CSS,JS/adminMessages.html
+++ b/Phase 1 - HTML,CSS,JS/adminMessages.html
@@ -4,6 +4,11 @@
 <title>Admin-Company</title>
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\admin.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
 </head>
 
 <body>
@@ -14,9 +19,11 @@
         <hr>
         <hr>
         </div>
-<div class="content"></div>
+<div class="contentMsg"></div>
+
 <h2>Admin Messages</h2>
 <div class="message">
+        <img id = "back" onclick="goBack()" src = "src\back.png">
     <form class="message">
     <h3 class="message">Messages</h3><br>
     </form>
