--- a/Phase 1 - HTML,CSS,JS/candidateAppliedJob.html
+++ b/Phase 1 - HTML,CSS,JS/candidateAppliedJob.html
@@ -4,6 +4,12 @@
 <title>Posted Jobs</title>
 <link rel="stylesheet" type="text/css" href="CSS\Stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS\candidate-menu.css">
+<script>
+        function goBack(){
+        window.history.back();
+    }
+    </script>
+
 </head>
 <body>
 
@@ -24,6 +30,7 @@
 </div>
 <div class="content"></div>
 <h2>Applied Jobs</h2>
+<img id = "back" onclick="goBack()" src = "src\back.png">
 <div class="company">
     <center>    
     <table class="appliedJobs">
